# jupyterlab-theme-editor

./: .copier-answers.yml  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  conftest.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build.yml  check-release.yml
_temp_extension/: .gitignore  .prettierignore  README.md  RELEASE.md  install.json  package.json
_temp_extension/.github/workflows/: build.yml
_temp_extension/binder/: postBuild
_temp_extension/jupyter_theme_editor/: __init__.py  handlers.py
_temp_extension/jupyter_theme_editor/tests/: test_handlers.py
_temp_extension/schema/: plugin.json
_temp_extension/src/: handler.ts  index.ts
binder/: environment.yml  postBuild
jupyter-config/nb-config/: jupyter_theme_editor.json
jupyter-config/server-config/: jupyter_theme_editor.json
jupyter_theme_editor/: __init__.py  handlers.py
jupyter_theme_editor/tests/: __init__.py  test_handlers.py
schema/: plugin.json
src/: handler.ts  icons.ts  index.ts  model.ts  schema.json  view.tsx
src/__tests__/: jupyter_theme_editor.spec.ts
style/: base.css  index.css  template.css  variables.css
ui-tests/: jupyter_theme_editor.spec.ts  package.json
ui-tests/tests/: jupyter_theme_editor.spec.ts
